--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"webpack-dev-server --open",
     "create": "webpack"
   },
   "author": "carmine",
