--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open",
-    "create": "webpack"
+    "start": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production",
   },
   "author": "carmine",
   "license": "ISC",
