added babel.config, fix webpack configuration, added dependecy, bundle now but getting at console:"Uncaught ReferenceError: regeneratorRuntime is not defined"

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production",
+    "build": "webpack"
   },
   "author": "carmine",
   "license": "ISC",
@@ -23,7 +23,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "install": "^0.13.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "style-loader": "^1.0.0",
